objects/CRM_ChannelValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CRM_DemoEmail__c</fullName>
        <label>Demographics Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_DemoMailingAddress__c</fullName>
        <label>Demographics Mailing Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_IsTargeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Targeted</label>
        <type>Checkbox</type>
    </fields>
    <label>ChannelValues</label>
</CustomObject>